src/objects/Trial_Level__mdt.object
<CustomObject>
    <fields>
        <fullName>Advanced_hiking_equipment_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced hiking equipment required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_hiking_footwear_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced hiking footwear required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>Trial Level colour in hex value</description>
        <label>Colour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difficulty_Level__c</fullName>
        <label>Experience Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                    <default>true</default>
                    <label>Beginner</label>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dogs_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dogs allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experienced_hikers_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experienced hikers only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Beginners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Beginners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kids_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kids allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Water required</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>